--- a/public/404.html
+++ b/public/404.html
@@ -228,13 +228,11 @@
   <div class="context primary-text-color">
     <!-- doesn't use context_content because it's ALWAYS the same thing -->
     <p>
-      You may want to head back to the homepage.<br />
-      If you think something is broken, report a problem.
+      <iframe src="https://giphy.com/embed/11gYYbySTvUC2s" width="480" height="277" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/cheezburger-funny-kids-11gYYbySTvUC2s">via GIPHY</a></p>
     </p>
   </div>
   <div class="buttons-container">
     <a class="border-button" href="http://www.bookids.fun" target="_blank">Go To Homepage</a>
-    <a class="border-button" href="mailto:www.bookids.fun" target="_blank">Report A Problem</a>
   </div>
 </div>
 
