--- a/public/500.html
+++ b/public/500.html
@@ -228,14 +228,13 @@
     <div class="context primary-text-color">
 
     <p>
-      Go back to the previous page and try again.
-      If you think something is broken, report a problem.
+     <iframe src="https://giphy.com/embed/11gYYbySTvUC2s" width="480" height="277" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/cheezburger-funny-kids-11gYYbySTvUC2s">via GIPHY</a></p>
     </p>
 
 
     </div>
   <div class="buttons-container">
-    <a class="border-button" href="mailto:www.bookids.fun" target="_blank">Report A Problem</a>
+    <a class="border-button" href="http://www.bookids.fun" target="_blank">Back to the HomePage</a>
   </div>
 </div>
 
