--- a/public/404.html
+++ b/public/404.html
@@ -232,7 +232,7 @@
     </p>
   </div>
   <div class="buttons-container">
-    <a class="border-button" href="http://www.bookids.fun" target="_blank">Go To Homepage</a>
+    <a class="border-button" href="https://kidbooks.herokuapp.com/" target="_blank">Go To Homepage</a>
   </div>
 </div>
 
