--- a/public/500.html
+++ b/public/500.html
@@ -234,7 +234,7 @@
 
     </div>
   <div class="buttons-container">
-    <a class="border-button" href="http://www.bookids.fun" target="_blank">Back to the HomePage</a>
+    <a class="border-button" href="https://kidbooks.herokuapp.com/" target="_blank">Back to the HomePage</a>
   </div>
 </div>
 
